config/mesh/mesh-resources/control-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: control-gateway
  namespace: travel-control
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - control.travel-control.CLUSTER_DOMAIN
#    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
